# iamwho

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: iam-audit.yml
docs/: cheatsheet.md  methodology.md
src/iamwho/: __init__.py  cli.py  models.py
src/iamwho/checks/: __init__.py  egress.py  ingress.py  privilege_mutation.py
