[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iamwho"
version = "0.1.4"
description = "IAM principal analysis: ingress, egress, mutation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "boto3>=1.34",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
iamwho = "iamwho.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/iamwho"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
